--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Course Website</title>
+    <title>Call Bridge </title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
