--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Courses</a>
+              <a class="nav-link" href="./Pages/Courses/Courses.html">Courses</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">About</a>
