--- a/Pages/TestsEnglishListening/TestsEnglishListening.html
+++ b/Pages/TestsEnglishListening/TestsEnglishListening.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><h2>CALL BRIDGE ACADEMY</h2></a>
+        <a class="navbar-brand" href="/index.html"><h2 style="margin-left: 110px;">CALL BRIDGE ACADEMY</h2></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,18 +37,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html"
-                >Home</a
+              <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="../About/About.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Courses/Courses.html">Courses</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a 
+                class="nav-link dropdown-toggle active " 
+                href="#" 
+                id="testDropdown" 
+                role="button" 
+                data-bs-toggle="dropdown" 
+                aria-expanded="false"
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./Courses.html">Courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+                Tests
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="testDropdown">
+                <li><a class="dropdown-item" href="../TestsEnglishListening/TestsEnglishListening.html">English </a></li>
+                <li><a class="dropdown-item" href="../IQTest/IQTest.html">IQ </a></li>
+              </ul>
             </li>
           </ul>
           <!-- Add Join Us Button and Other Links -->
@@ -70,7 +81,7 @@
       </div>
     </section>
     <!-- Video Section -->
-    <section class="my-5">
+    <section style="margin-top: 100px;">
       <div class="container text-center">
         <div class="video-container">
           <video src="/assets/Videos/LandingVideo.mp4" controls></video>
@@ -81,7 +92,7 @@
       </div>
     </section>
     <!-- Question Section -->
-    <section class="question-section">
+    <section class="question-section" style="margin-top: 80px;">
       <div class="container">
         <div class="row">
           <div class="col">
@@ -107,29 +118,28 @@
     </section>
 
     <!-- Task Section -->
-    <section class="task-section">
+    <section class="task-section" style="margin-top: 120px;">
       <div class="container">
-        <div class="task-title">
-          <h3>Task 2: Intermediate Level</h3>
+        <div class="task-title" style="margin-top: 120px;">
+          <h3 >Task 2: Intermediate Level</h3>
           <hr class="line" />
         </div>
-        <div class="video-container mt-5">
+        <div class="video-container " style="margin-top: 98px;">
           <video src="/assets/Videos/third.mp4" controls></video>
           <div class="play-btn">
             <i class="bi bi-play-circle"></i>
           </div>
         </div>
-        <div class="row" style="margin-top: 100px">
+        <div class="row" style="margin-top: 80px">
           <div class="col">
             <h3 class="question">1 - Where are they planning to go?</h3>
             <textarea
               class="custom-textarea form-control mt-3"
               rows="4"
-              placeholder="Type your answer here..."
             ></textarea>
           </div>
         </div>
-        <div class="row" style="margin-top: 100px">
+        <div class="row" style="margin-top: 100px;margin-bottom: 120px;">
           <div class="col">
             <h3 class="question">
               2-What activities are they interested in doing?
@@ -137,7 +147,6 @@
             <textarea
               class="custom-textarea form-control mt-3"
               rows="4"
-              placeholder="Type your answer here..."
             ></textarea>
           </div>
         </div>
@@ -147,7 +156,7 @@
 <!-- Adv Section -->
 <section class="Advanced">
     <div class="container">
-        <div class="task-title">
+        <div class="task-title" style="margin-top: 120px;">
             <h3>Task 3: Advanced Level</h3>
             <hr class="line">
         </div>
@@ -157,13 +166,13 @@
                 <i class="bi bi-play-circle"></i>
             </div>
         </div>
-        <div class="row" style="margin-top: 100px;">
+        <div class="row" style="margin-top: 80px;">
             <div class="col">
                 <h3 class="question">Summarize the main points of the report in two sentences</h3>
-                <textarea class="custom-textareas form-control mt-3" rows="4" placeholder="Type your answer here..."></textarea>
+                <textarea class="custom-textareas form-control mt-3" rows="4" ></textarea>
             </div>
         </div>
-        <div class="row" style="margin-top: 100px;">
+        <div class="row" style="margin-top: 120px;">
             <div class="col ">
                 <h3 class="text-center"><a class="next" style="text-decoration: none;" href="../EnglishSpeaking/EnglishSpeaking.html">Speaking Section</a> <span><img src="/assets/images/contact us.png" alt=""></span></h3>
             </div>
@@ -174,12 +183,12 @@
 </section>
     <!-- Footer -->
     <footer>
-      <div class="container-fluid rempad ">
-        <div class="row ">
-          <div class="col-md-6 col-12 mt-5"">
-            <h2>The Ultimate Learning Hub to Unlock Your Full Potential</h2>
+      <div class="container-fluid rempad " >
+        <div class="row rempad " style="padding-top: 96px; padding-left: 110px; ">
+          <div class="col-md-6 col-12 ">
+            <h2>The Ultimate Learning <br> Hub to Unlock Your <br> Full Potential</h2>
           </div>
-          <div class="col-md-3 col-12 mt-5"">
+          <div class="col-md-3 col-12 ">
             <p class="navg">Navigation</p>
             <ul style="padding: 0">
               <li>Home</li>
@@ -188,7 +197,7 @@
               <li>Tests</li>
             </ul>
           </div>
-          <div class="col-md-3 col-12 mt-5"">
+          <div class="col-md-3 col-12 ">
             <p class="end">Still Have Questions?</p>
             <button type="button" class="btn btn-light">
               Contact Us
