--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
           ><img
-            style="width: 100%"
+            style="width: 100%;margin-left: 110px;"
             src="./assets/images/CALL BRIDGE ACADEMY.png"
             alt=""
         /></a>
@@ -69,13 +69,26 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="./Pages/About/About.html">About</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="./Pages/Courses/Courses.html">Courses</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+            <li class="nav-item dropdown">
+              <a 
+                class="nav-link dropdown-toggle " 
+                href="#" 
+                id="testDropdown" 
+                role="button" 
+                data-bs-toggle="dropdown" 
+                aria-expanded="false"
+              >
+                Test
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="testDropdown">
+                <li><a class="dropdown-item" href="./Pages/TestsEnglishListening/TestsEnglishListening.html">English </a></li>
+                <li><a class="dropdown-item" href="./Pages/IQTest/IQTest.html">IQ </a></li>
+              </ul>
             </li>
           </ul>
           <!-- Add Join Us Button and Other Links -->
@@ -268,7 +281,7 @@
             </p>
           </div>
         </div>
-        <div class="row mt-5">
+        <div class="row" style="margin-top: 130px;">
           <div class="col-12">
             <div class="scroll-container">
               <div class="scrolling-content">
@@ -312,7 +325,7 @@
     <!-- start of call bridge adademy -->
     <section class="call">
       <div class="container">
-        <div class="row" style="margin-top: 150px">
+        <div class="row" style="margin-top: 130px">
           <div class="col-md-6 col-12">
             <h4 class="callSupTitle">WHY CALL BRIDGE ACADEMY?</h4>
             <h2 class="callTitle mt-4">
@@ -338,7 +351,7 @@
             />
           </div>
         </div>
-        <div style="margin-top: 150px" class="row">
+        <div style="margin-top: 130px" class="row">
           <div class="col-md-6 col-12">
             <img
               src="./assets/images/vlogger-woman-answering-listeners-question-online-vlog-talking-into-podcasting-microphone-home-living-room-social-media-influencer-with-headset-recording-entertainment-production 1 1.png"
@@ -374,7 +387,7 @@
       </div>
 
       <!-- Make the last row full-width -->
-      <div class="container-fluid" style="margin-top: 100px">
+      <div class="container-fluid" style="margin-top: 105px">
         <div class="row mt-5">
           <div class="col-12">
             <div class="scroll-container">
@@ -490,7 +503,7 @@
 
     <!-- end of call bridge adademy -->
     <!-- start of review section -->
-    <section id="review" class="review-area">
+    <section id="review" class="review-area" style="margin-top: 106px;">
       <div class="container">
         <div class="row">
           <div class="col-12">
@@ -503,7 +516,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 106px;">
           <div class="col-12 text-center">
             <div style="position: relative; display: inline-block">
               <video
@@ -536,7 +549,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 60px;">
           <div class="col-12 text-center mt-4">
             <button type="button" class="btn btn-success">
               Join Us Now
@@ -549,7 +562,7 @@
             </button>
           </div>
         </div>
-        <div class="row mb-5">
+        <div class="row " style="margin-top: 160px;margin-bottom: 70px;">
           <div class="col-md">
             <p class="ED">EDUCATION</p>
             <h3 class="Sucss">Success Stories</h3>
