--- a/Pages/EnglishReading/EnglishReading.html
+++ b/Pages/EnglishReading/EnglishReading.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><h2>CALL BRIDGE ACADEMY</h2></a>
+        <a class="navbar-brand" href="/index.html"><h2 style="margin-left: 110px;">CALL BRIDGE ACADEMY</h2></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,18 +37,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html"
-                >Home</a
+              <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="../About/About.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Courses/Courses.html">Courses</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a 
+                class="nav-link dropdown-toggle active " 
+                href="#" 
+                id="testDropdown" 
+                role="button" 
+                data-bs-toggle="dropdown" 
+                aria-expanded="false"
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./Courses.html">Courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+                Tests
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="testDropdown">
+                <li><a class="dropdown-item" href="../TestsEnglishListening/TestsEnglishListening.html">English </a></li>
+                <li><a class="dropdown-item" href="../IQTest/IQTest.html">IQ </a></li>
+              </ul>
             </li>
           </ul>
           <!-- Add Join Us Button and Other Links -->
@@ -71,14 +82,14 @@
     </section>
  
     <!-- Question Section -->
-    <section class="question-section">
+    <section class="question-section" style="margin-top: 100px;">
       
       <div class="container">
         <div class="task-title mb-5">
           <h3>Task 1: Basic Level</h3>
           <hr class="line" />
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: 128px;">
           <div class="col text-center">
             <p class="para">
               “John wakes up every morning at 7:00 AM. He starts his day by having breakfast and then <br>
@@ -189,12 +200,12 @@
 </section>
     <!-- Footer -->
     <footer>
-      <div class="container-fluid rempad ">
-        <div class="row ">
-          <div class="col-md-6 col-12 mt-5"">
-            <h2>The Ultimate Learning Hub to Unlock Your Full Potential</h2>
+      <div class="container-fluid rempad " >
+        <div class="row rempad " style="padding-top: 96px; padding-left: 110px; ">
+          <div class="col-md-6 col-12 ">
+            <h2>The Ultimate Learning <br> Hub to Unlock Your <br> Full Potential</h2>
           </div>
-          <div class="col-md-3 col-12 mt-5"">
+          <div class="col-md-3 col-12 ">
             <p class="navg">Navigation</p>
             <ul style="padding: 0">
               <li>Home</li>
@@ -203,7 +214,7 @@
               <li>Tests</li>
             </ul>
           </div>
-          <div class="col-md-3 col-12 mt-5"">
+          <div class="col-md-3 col-12 ">
             <p class="end">Still Have Questions?</p>
             <button type="button" class="btn btn-light">
               Contact Us
