--- a/Pages/EnglishSpeaking/EnglishSpeaking.html
+++ b/Pages/EnglishSpeaking/EnglishSpeaking.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark mb-3">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><h2>CALL BRIDGE ACADEMY</h2></a>
+        <a class="navbar-brand" href="/index.html"><h2 style="margin-left: 110px;">CALL BRIDGE ACADEMY</h2></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -37,18 +37,29 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/index.html"
-                >Home</a
+              <a class="nav-link " aria-current="page" href="/index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="../About/About.html">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../Courses/Courses.html">Courses</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a 
+                class="nav-link dropdown-toggle active " 
+                href="#" 
+                id="testDropdown" 
+                role="button" 
+                data-bs-toggle="dropdown" 
+                aria-expanded="false"
               >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./Courses.html">Courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+                Tests
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="testDropdown">
+                <li><a class="dropdown-item" href="../TestsEnglishListening/TestsEnglishListening.html">English </a></li>
+                <li><a class="dropdown-item" href="../IQTest/IQTest.html">IQ </a></li>
+              </ul>
             </li>
           </ul>
           <!-- Add Join Us Button and Other Links -->
@@ -72,15 +83,15 @@
     <!-- start of tasks  -->
 
    <!-- Task Section -->
-   <section class="task-section" >
+   <section class="task-section" style="margin-top: 100px;" >
     <div class="container">
-      <div class="task-title" style="margin-bottom: 80px;">
+      <div class="task-title" style="margin-bottom: 100px;">
         <h3>Task 1: Basic Level</h3>
         <hr class="line">
       </div>
   
       <div class="task-content">
-        <p class="question">1-Introduce yourself. Talk about your name, where you are from, and what you do</p>
+        <p class="question" >1-Introduce yourself. Talk about your name, where you are from, and what you do</p>
   
         <div class="audio-controls">
           <audio id="audioPlayback" controls></audio>
@@ -92,9 +103,9 @@
       </div>
     </div>
   </section>
-  <section class="task-sectionDark" style="margin-top: 80px;">
-    <div class="container">
-      <div class="task-title" style="margin-bottom: 80px;">
+  <section class="task-sectionDark" style="margin-top: 120px;">
+    <div class="container" style="margin-top: 100px;margin-bottom: 100px;">
+      <div class="task-title" style="margin-bottom: 100px; ">
         <h3>Task 2: Intermediate Level</h3>
         <hr class="line">
       </div>
@@ -137,19 +148,19 @@
   <div class="container">
     <div class="row" style="margin-top: 100px;">
       <div class="col ">
-          <h3 class="text-center"><a class="next" style="text-decoration: none;" href="../EnglishSpeaking/EnglishSpeaking.html">Reading Section </a> <span><img src="/assets/images/contact us.png" alt=""></span></h3>
+          <h3 class="text-center"><a class="next" style="text-decoration: none;" href="../EnglishReading/EnglishReading.html">Reading Section </a> <span><img src="/assets/images/contact us.png" alt=""></span></h3>
       </div>
   </div>
   </div>
  </section>
-    <!-- Footer -->
-    <footer>
-      <div class="container-fluid rempad ">
-        <div class="row ">
-          <div class="col-md-6 col-12 mt-5"">
-            <h2>The Ultimate Learning Hub to Unlock Your Full Potential</h2>
+     <!-- Footer -->
+     <footer>
+      <div class="container-fluid rempad " >
+        <div class="row rempad " style="padding-top: 96px; padding-left: 110px; ">
+          <div class="col-md-6 col-12 ">
+            <h2>The Ultimate Learning <br> Hub to Unlock Your <br> Full Potential</h2>
           </div>
-          <div class="col-md-3 col-12 mt-5"">
+          <div class="col-md-3 col-12 ">
             <p class="navg">Navigation</p>
             <ul style="padding: 0">
               <li>Home</li>
@@ -158,7 +169,7 @@
               <li>Tests</li>
             </ul>
           </div>
-          <div class="col-md-3 col-12 mt-5"">
+          <div class="col-md-3 col-12 ">
             <p class="end">Still Have Questions?</p>
             <button type="button" class="btn btn-light">
               Contact Us
