--- a/Pages/Courses/Courses.html
+++ b/Pages/Courses/Courses.html
@@ -22,49 +22,63 @@
 </head>
 <body>
        <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><img
-            style="width: 100%"
-            src="/assets/images/CALL BRIDGE ACADEMY.png"
-            alt=""
-        /></a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav mx-auto">
-            <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="/index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="./Courses.html">Courses</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
-            </li>
-          </ul>
-          <!-- Add Join Us Button and Other Links -->
-          <div class="navbar-buttons d-lg-flex d-none">
-            <a class="nav-link login" href="#">Login</a>
-            <a class="nav-link support" href="#">Support</a>
-            <a class="btn-join-us" href="#">Join Us</a>
+       <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"
+            ><img
+              style="width: 100%;margin-left: 110px;"
+              src="/assets/images/CALL BRIDGE ACADEMY.png"
+              alt=""
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../About/About.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../Courses/Courses.html">Courses</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a 
+                  class="nav-link dropdown-toggle " 
+                  href="#" 
+                  id="testDropdown" 
+                  role="button" 
+                  data-bs-toggle="dropdown" 
+                  aria-expanded="false"
+                >
+                  Test
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="testDropdown">
+                  <li><a class="dropdown-item" href="../TestsEnglishListening/TestsEnglishListening.html">English </a></li>
+                  <li><a class="dropdown-item" href="../IQTest/IQTest.html">IQ </a></li>
+                </ul>
+              </li>
+            </ul>
+            <!-- Add Join Us Button and Other Links -->
+            <div class="navbar-buttons d-lg-flex d-none">
+              <a class="nav-link login" href="#">Login</a>
+              <a class="nav-link support" href="#">Support</a>
+              <a class="btn-join-us" href="#">Join Us</a>
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+  
 
     <!-- start of Courses -->
      <section>
