--- a/dasda.html
+++ b/dasda.html
@@ -3,47 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .task-section {
-  background-color: transparent !important;
-  position: relative; /* Ensure it's not interfering with the child elements */
+:root {
+    --themeht-primary2-color: #103ce7;
+    --themeht-secondary2-color: #64e9ff;
+    --themeht-white-color: #ffffff;
+    --themeht-secondary-font-family: "Archivo", sans-serif;
 }
 
-.audio-controls {
-  background-color: transparent !important;
-  position: relative; /* Ensure correct stacking context */
+body {
+    margin: 0;
+    padding: 0;
+    font-family: var(--themeht-secondary-font-family);
 }
 
-.task-section audio {
-  background-color: red !important;
-  z-index: 999 !important;
-  position: relative; /* Ensure it's positioned correctly */
-  width: 100%; /* Ensure it takes up full width if needed */
-  height: auto; /* Adjust height if necessary */
+.garb {
+    margin-top: 200px;
+    padding: 30px 0;
+    height: 100% !important;
+    transform: scale(1.1) rotate(-10deg);
+    overflow-x: hidden !important;
 }
-.task-section::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: blue; /* Highlight the area */
-  z-index: 500; /* Ensure it's below the audio element */
+
+.marquee-container {
+    max-width: 100% !important;
+    width: 100% !important;
+    overflow: hidden;
+    position: relative;
+    height: 300px; /* Adjust image height */
+    width: 449px;
+}
+
+.marquee-images {
+    display: flex;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 200%; /* Ensure width is enough to accommodate all images twice */
+}
+
+.marquee-images img {
+    height: 300px; /* Adjust image height */
+    width: 449px;
+    display: inline-block;
+    margin-right: 20px; /* Space between images */
+    transform: rotate(-5deg); /* Tilt the images */
+}
+
+/* Animation for the first marquee */
+@keyframes marquee {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(-50%); /* Scrolls the width of half the container */
+    }
+}
+
+.marquee-container:first-of-type .marquee-images {
+    animation: marquee 10s linear infinite;
+}
+
+/* Animation for the second marquee, moving in the opposite direction */
+@keyframes marquee-reverse {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(50%); /* Scrolls the width of half the container in the opposite direction */
+    }
+}
+
+.marquee-container:last-of-type .marquee-images {
+    animation: marquee-reverse 10s linear infinite;
+}
+
+.login-form-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
 }
 
     </style>
 </head>
 <body>
-    <div class="task-section">
-        <div class="audio-controls">
-          <audio controls>
-            <source src="audio.mp3" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
+
+  <div class="container-fluid">
+    <div class="row">
+        <!-- Left Column with Scrolling Images -->
+        <div class="col-md-6 garb">
+            <div class="marquee-container">
+                <div class="marquee-images">
+                    <!-- First set of images -->
+                    <img src="./assets/images/Slider/Frame 28.png" alt="Image 1" />
+                    <img src="./assets/images/Slider/Frame 29.png" alt="Image 2" />
+                    <img src="./assets/images/Slider/medium-shot-people-sitting-library.png" alt="Image 3" />
+                    <!-- Duplicate the images -->
+                    <img src="./assets/images/Slider/Frame 28.png" alt="Image 1" />
+                    <img src="./assets/images/Slider/Frame 29.png" alt="Image 2" />
+                    <img src="./assets/images/Slider/medium-shot-people-sitting-library.png" alt="Image 3" />
+                </div>
+            </div>
+            <div class="marquee-container">
+              <div class="marquee-images">
+                <!-- Second set of images, same as above -->
+                <img src="./assets/images/Slider/Frame 28.png" alt="Image 1" />
+                <img src="./assets/images/Slider/Frame 29.png" alt="Image 2" />
+                <img src="./assets/images/Slider/medium-shot-people-sitting-library.png" alt="Image 3" />
+                <!-- Duplicate the images -->
+                <img src="./assets/images/Slider/Frame 28.png" alt="Image 1" />
+                <img src="./assets/images/Slider/Frame 29.png" alt="Image 2" />
+                <img src="./assets/images/Slider/medium-shot-people-sitting-library.png" alt="Image 3" />
+              </div>
+          </div>
         </div>
-      </div>
-      
+        
+        <!-- Right Column with Login Form -->
+        <div class="col-md-6 login-form-container">
+            <div class="login-form">
+                <h2>Login</h2>
+                <form>
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
