--- a/Pages/IQTest/IQTest.html
+++ b/Pages/IQTest/IQTest.html
@@ -58,16 +58,16 @@
                   Test
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="testDropdown">
-                  <li><a class="dropdown-item" href="#">English </a></li>
-                  <li><a class="dropdown-item" href="#">IQ </a></li>
+                  <li><a class="dropdown-item" href="../TestsEnglishListening/TestsEnglishListening.html">English </a></li>
+                  <li><a class="dropdown-item" href="./IQTest.html">IQ </a></li>
                 </ul>
               </li>
             </ul>
             <!-- Add Join Us Button and Other Links -->
             <div class="navbar-buttons d-lg-flex d-none">
-              <a class="nav-link login" href="#">Login</a>
-              <a class="nav-link support" href="#">Support</a>
-              <a class="btn-join-us" href="#">Join Us</a>
+              <a class="nav-link login" href="../Login/Login.html">Login</a>
+              <a class="nav-link support" href="../ContactUs/ContactUs.html">Support</a>
+              <a class="btn-join-us" href="../Login/Login.html">Join Us</a>
             </div>
           </div>
         </div>
