--- a/Pages/Sign up/Sign up.html
+++ b/Pages/Sign up/Sign up.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Call Bridge Login </title>
+    <title>Call Bridge Sign up </title>
   <!-- Bootstrap CSS -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
@@ -184,10 +184,9 @@ body {
 }
 /* Additional styles for the Join Us button */
 .btn-join-us {
-  background-color: #dcf247; /* Background color */
+  background-color: transparent; /* Background color */
   color: #000000; /* Text color */
   padding: 10px 20px; /* Padding */
-  border-radius: 30px; /* Rounded corners */
   font-size: 20px; /* Font size */
   text-decoration: none; /* Remove underline */
   display: flex; /* Flexbox for centering text */
@@ -294,7 +293,7 @@ margin-top: 50px;
             <!-- Add Join Us Button and Other Links -->
             <div class="navbar-buttons d-lg-flex d-none">
               <a class="nav-link support" href="../ContactUs/ContactUs.html">Support</a>
-              <a class="btn-join-us" href="../Sign up/Sign up.html">Login</a>
+              <a class="btn-join-us" href="../Login/Login.html">Join Us</a>
             </div>
           </div>
         </div>
@@ -330,19 +329,27 @@ margin-top: 50px;
             </div>
             
             <!-- Right Column with Login Form -->
-            <div class="col-md-6 login-form-container">
+            <div class="col-md-6 login-form-container" style="margin-top: 50px;">
                 <div class="login-form">
                     <h2>Please provide your information*</h2>
                     <form>
                         <div style="margin-bottom: 50px;">
+                            <label for="name" class="form-label">Name* </label>
+                            <input type="text" class="form-control custom-input" id="name" placeholder="Jane Smith">
+                        </div>
+                        <div style="margin-bottom: 50px;">
                             <label for="email" class="form-label">Email * </label>
                             <input type="email" class="form-control custom-input" id="email" placeholder="janesmith@gmail.com">
+                        </div>
+                        <div style="margin-bottom: 50px;">
+                            <label for="phone" class="form-label">Phone Number * </label>
+                            <input type="number" class="form-control custom-input" id="phone" placeholder="+201115798461">
                         </div>
                         <div >
                             <label for="password" class="form-label">Password *</label>
                             <input type="password" class="form-control custom-input" id="password" placeholder="JaneSmith@123">
                         </div>
-                        <button type="submit" class="btn btn-primary">Login <span><img src="/assets/images/contact us.png" alt=""></span></button>
+                        <button type="submit" class="btn btn-primary">Sign Up <span><img src="/assets/images/contact us.png" alt=""></span></button>
                     </form>
                 </div>
             </div>
