--- a/Pages/TestsEnglishListening/TestsEnglishListening.html
+++ b/Pages/TestsEnglishListening/TestsEnglishListening.html
@@ -64,9 +64,9 @@
           </ul>
           <!-- Add Join Us Button and Other Links -->
           <div class="navbar-buttons d-lg-flex d-none">
-            <a class="nav-link login" href="#">Login</a>
-            <a class="nav-link support" href="#">Support</a>
-            <a class="btn-join-us" href="#">Join Us</a>
+            <a class="nav-link login" href="../Login/Login.html">Login</a>
+            <a class="nav-link support" href="../ContactUs/ContactUs.html">Support</a>
+            <a class="btn-join-us" href="../Sign up/Sign up.html">Join Us</a>
           </div>
         </div>
       </div>
