--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
           </ul>
           <!-- Add Join Us Button and Other Links -->
           <div class="navbar-buttons d-lg-flex d-none">
-            <a class="nav-link login" href="#">Login</a>
-            <a class="nav-link support" href="#">Support</a>
-            <a class="btn-join-us" href="#">Join Us</a>
+            <a class="nav-link login" href="./Pages/Login/Login.html">Login</a>
+            <a class="nav-link support" href="./Pages/ContactUs/ContactUs.html">Support</a>
+            <a class="btn-join-us" href="./Pages/Sign up/Sign up.html">Join Us</a>
           </div>
         </div>
       </div>
