--- a/Pages/Login/Login.html
+++ b/Pages/Login/Login.html
@@ -71,7 +71,7 @@ body {
     width: 449px;
     display: inline-block;
     margin-right: 20px; /* Space between images */
-    transform: rotate(-5deg); /* Tilt the images */
+    /* transform: rotate(-5deg);  */
 }
 
 /* Animation for the first marquee */
@@ -294,7 +294,7 @@ margin-top: 50px;
             <!-- Add Join Us Button and Other Links -->
             <div class="navbar-buttons d-lg-flex d-none">
               <a class="nav-link support" href="../ContactUs/ContactUs.html">Support</a>
-              <a class="btn-join-us" href="../Sign up/Sign up.html">Login</a>
+              <a class="btn-join-us" href="../Sign up/Sign up.html">Join Us</a>
             </div>
           </div>
         </div>
