--- a/Pages/Course/Course.html
+++ b/Pages/Course/Course.html
@@ -13,7 +13,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/index.html"
           ><img
             style="width: 100%;margin-left: 110px;"
             src="/assets/images/CALL BRIDGE ACADEMY.png"
@@ -33,13 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+              <a class="nav-link " aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../About/About.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Courses/Courses.html">Courses</a>
+              <a class="nav-link active" href="../Courses/Courses.html">Courses</a>
             </li>
             <li class="nav-item dropdown">
               <a 
