--- a/Pages/IQTest/IQTest.html
+++ b/Pages/IQTest/IQTest.html
@@ -50,7 +50,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark mb-3">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><h2>CALL BRIDGE ACADEMY</h2></a>
+      <a class="navbar-brand" href="/index.html"><h2>CALL BRIDGE ACADEMY</h2></a>
       <button
         class="navbar-toggler"
         type="button"
