--- a/Pages/Login/Login.html
+++ b/Pages/Login/Login.html
@@ -275,7 +275,7 @@ margin-top: 50px;
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-            <a style="margin-left: 110px;" class="navbar-brand" href="#"><h2>CALL BRIDGE ACADEMY</h2></a>
+            <a style="margin-left: 110px;" class="navbar-brand" href="/index.html"><h2>CALL BRIDGE ACADEMY</h2></a>
 
           <button
             class="navbar-toggler"
