--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="./index.html"
           ><img
             style="width: 100%;margin-left: 110px;"
             src="./assets/images/CALL BRIDGE ACADEMY.png"
